feat(config): store config in topic